// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RideListHandler when in search mode with values={"mode":"offer","arriveLocation":"bar"} 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
        <button
          className=""
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <a
        href="/?mode=offer"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value="bar"
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when in search mode with values={"mode":"offer","departLocation":"foo","arriveLocation":"bar"} 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          type="text"
          value="foo"
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=offer"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value="bar"
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when in search mode with values={"mode":"offer"} 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={true}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
        <button
          className=""
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <a
        href="/?mode=offer"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when in search mode with values={"mode":"request","departLocation":"foo"} 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          type="text"
          value="foo"
        />
        <div
          className="backdrop"
        />
      </div>
      <a
        href="/?mode=request"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when in search mode with values={"mode":"request"} 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={true}
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Departure location"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
        <button
          className=""
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <a
        href="/?mode=request"
        onClick={[Function]}
        title="Close"
      >
        <button
          className=" closeButton"
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg
            className="closeIcon"
          />
        </button>
      </a>
    </div>
    <div
      className="headerBottom inSearchMode"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
    <input
      hidden={true}
      type="submit"
    />
  </form>
</header>
`;

exports[`RideListHandler when not in search mode with values={"mode":"offer"} 1`] = `
<header
  className="header offer"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Offer a ride"
        />
        <div
          className="backdrop"
        />
        <button
          className=""
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg
                className="icon"
              />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg
                className="icon"
              />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;

exports[`RideListHandler when not in search mode with values={"mode":"request","departLocation":"foo","arriveLocation":"bar"} 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Request a ride"
        />
        <div
          className="backdrop"
        />
        <button
          className=""
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg
                className="icon"
              />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg
                className="icon"
              />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;

exports[`RideListHandler when not in search mode with values={"mode":"request"} 1`] = `
<header
  className="header request"
>
  <form
    action="/search"
    method="get"
    onSubmit={[Function]}
  >
    <div
      className="headerTop"
    >
      <div
        className="boxField"
      >
        <input
          autoFocus={false}
          className="input"
          disabled={false}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          type="submit"
          value="Request a ride"
        />
        <div
          className="backdrop"
        />
        <button
          className=""
          data-react-toolbox="button"
          disabled={false}
          href={undefined}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <svg />
        </button>
      </div>
      <div
        className="FormInput"
      >
        <div
          className="FormError"
          style={
            Object {
              "display": "none",
            }
          }
        >
          
        </div>
        <radiogroup
          className="modeSwitch"
        >
          <label
            className="modeButton request"
            title="Request rides"
          >
            <input
              checked={true}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg
                className="icon"
              />
            </div>
          </label>
          <label
            className="modeButton offer"
            title="Offer rides"
          >
            <input
              checked={false}
              className="input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              type="radio"
            />
            <div
              className="button"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <svg
                className="icon"
              />
            </div>
          </label>
        </radiogroup>
      </div>
    </div>
    <div
      className="headerBottom"
    >
      <svg
        className="downChevron"
      />
      <div
        className="boxField"
      >
        <input
          className="input"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          placeholder="Destination"
          type="text"
          value=""
        />
        <div
          className="backdrop"
        />
      </div>
    </div>
  </form>
</header>
`;
